# pathfinder_2e_api

./: Cargo.toml
src/: ability.rs  action.rs  checks.rs  core.rs  creature.rs  input.rs  keyword.rs  main.rs  modifiers.rs  player.rs  proficiency.rs  save_throw.rs  skill.rs  storage.rs
src/checks/: check.rs  check_result.rs  traits.rs
src/creatures/: creature.rs
src/equipment/: armor.rs
src/modifiers/: attribute.rs  modifier.rs  modifier_type.rs  proficiency.rs
src/old stuff/: ability.rs  ancestry.rs  background.rs  class.rs  creature.rs  keyword.rs  player.rs  proficiency.rs  save_throw.rs  skill.rs
src/templates/: core.rs
