[package]
name = "rustfinder2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwat20 = "0.1.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = "1.0.192"
serde_derive = "1.0.192"
strum = "0.25.0"
strum_macros = "0.25.3"
